force-app/main/default/objects/Asset/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Delivery Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>