force-app/main/default/objects/Asset/fields/Depository_For_PMS__c.field-meta.xml
<CustomField>
    <fullName>Depository_For_PMS__c</fullName>
    <label>Depository (For PMS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>