force-app/main/default/objects/Asset/fields/Difference_in_bucket__c.field-meta.xml
<CustomField>
    <fullName>Difference_in_bucket__c</fullName>
    <label>Difference in bucket</label>
    <type>TextArea</type>
</CustomField>