force-app/main/default/objects/Asset/fields/Disbursal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_Amount__c</fullName>
    <label>Disbursal  Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>