force-app/main/default/objects/Asset/fields/Disbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursed_Amount__c</fullName>
    <label>Disbursed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>