force-app/main/default/objects/Asset/fields/Discontinued_Fund_ULIP__c.field-meta.xml
<CustomField>
    <fullName>Discontinued_Fund_ULIP__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Discontinued Fund (ULIP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>