force-app/main/default/objects/Asset/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>ABHIL</description>
    <label>Discount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>