force-app/main/default/objects/Asset/fields/DM_Ownership__c.field-meta.xml
<CustomField>
    <fullName>DM_Ownership__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>DM Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>