force-app/main/default/objects/Asset/fields/Dop_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Dop_End_Date__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Dop End Date (ULIP)</label>
    <type>Date</type>
</CustomField>