force-app/main/default/objects/Asset/fields/DOP_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DOP_Start_Date__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>DOP Start Date (ULIP)</label>
    <type>Date</type>
</CustomField>