force-app/main/default/objects/Asset/fields/DP_ID_For_PMS__c.field-meta.xml
<CustomField>
    <fullName>DP_ID_For_PMS__c</fullName>
    <label>DP ID(For PMS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>