force-app/main/default/objects/Asset/fields/DPD__c.field-meta.xml
<CustomField>
    <fullName>DPD__c</fullName>
    <label>DPD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>