force-app/main/default/objects/Asset/fields/Draw_day__c.field-meta.xml
<CustomField>
    <fullName>Draw_day__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Draw day</label>
    <length>20</length>
    <type>Text</type>
</CustomField>