force-app/main/default/objects/Asset/fields/DRMCustomer__c.field-meta.xml
<CustomField>
    <fullName>DRMCustomer__c</fullName>
    <description>ABHIL</description>
    <label>Chronic Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>