force-app/main/default/objects/Asset/fields/DSA_Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>DSA_Referral_Partner__c</fullName>
    <label>DSA Referral Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>