force-app/main/default/objects/Asset/fields/ECS_Bounce_Reason__c.field-meta.xml
<CustomField>
    <fullName>ECS_Bounce_Reason__c</fullName>
    <label>ECS Bounce Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>