force-app/main/default/objects/Asset/fields/ECS_Mandate_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>ECS_Mandate_Registration_Status__c</fullName>
    <label>ECS Mandate Registration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>