force-app/main/default/objects/Asset/fields/Effect__c.field-meta.xml
<CustomField>
    <fullName>Effect__c</fullName>
    <label>Effect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>