force-app/main/default/objects/Asset/fields/EMI_Cycle_Date__c.field-meta.xml
<CustomField>
    <fullName>EMI_Cycle_Date__c</fullName>
    <label>EMI Cycle Date</label>
    <type>Date</type>
</CustomField>