force-app/main/default/objects/Asset/fields/EMI_End_Date__c.field-meta.xml
<CustomField>
    <fullName>EMI_End_Date__c</fullName>
    <label>EMI End Date</label>
    <type>Date</type>
</CustomField>