force-app/main/default/objects/Asset/fields/EMI_Percent__c.field-meta.xml
<CustomField>
    <fullName>EMI_Percent__c</fullName>
    <label>EMI Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>