force-app/main/default/objects/Asset/fields/EMIs_paid__c.field-meta.xml
<CustomField>
    <fullName>EMIs_paid__c</fullName>
    <label>EMIs paid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>