force-app/main/default/objects/Asset/fields/EMIs_pending__c.field-meta.xml
<CustomField>
    <fullName>EMIs_pending__c</fullName>
    <label>EMIs pending</label>
    <length>255</length>
    <type>Text</type>
</CustomField>