force-app/main/default/objects/Asset/fields/Employer_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Business_Name__c</fullName>
    <label>Employer Business Name</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>