force-app/main/default/objects/Asset/fields/EmployerGroup__c.field-meta.xml
<CustomField>
    <fullName>EmployerGroup__c</fullName>
    <label>Employer Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>