force-app/main/default/objects/Asset/fields/FAComplete__c.field-meta.xml
<CustomField>
    <fullName>FAComplete__c</fullName>
    <label>FA Completed On</label>
    <type>Date</type>
</CustomField>