force-app/main/default/objects/Asset/fields/FADateTime__c.field-meta.xml
<CustomField>
    <fullName>FADateTime__c</fullName>
    <label>FA Date and Time</label>
    <type>Date</type>
</CustomField>