force-app/main/default/objects/Asset/fields/Family_Definition__c.field-meta.xml
<CustomField>
    <fullName>Family_Definition__c</fullName>
    <description>ABHIL</description>
    <label>Family Definition</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>