force-app/main/default/objects/Asset/fields/FamilyType__c.field-meta.xml
<CustomField>
    <fullName>FamilyType__c</fullName>
    <description>ABHIL</description>
    <label>Family Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>