force-app/main/default/objects/Asset/fields/FAStatus__c.field-meta.xml
<CustomField>
    <fullName>FAStatus__c</fullName>
    <label>FA Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>