force-app/main/default/objects/Asset/fields/Finnone_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Finnone_Customer_No__c</fullName>
    <label>Finnone Customer No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>