force-app/main/default/objects/Asset/fields/First_Unpaid_Premium_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Unpaid_Premium_Date__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>First Unpaid Premium Date</label>
    <type>Date</type>
</CustomField>