force-app/main/default/objects/Asset/fields/Folio_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Folio_Creation_Date__c</fullName>
    <label>Folio Creation Date</label>
    <type>Date</type>
</CustomField>