force-app/main/default/objects/Asset/fields/Gap_Folio_Flag__c.field-meta.xml
<CustomField>
    <fullName>Gap_Folio_Flag__c</fullName>
    <label>Gap Folio Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>