force-app/main/default/objects/Asset/fields/GoGreen__c.field-meta.xml
<CustomField>
    <fullName>GoGreen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ABHIL</description>
    <label>Go Green</label>
    <type>Checkbox</type>
</CustomField>