force-app/main/default/objects/Asset/fields/GrossPremium__c.field-meta.xml
<CustomField>
    <fullName>GrossPremium__c</fullName>
    <description>ABHIL</description>
    <label>Gross Premium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>