force-app/main/default/objects/Asset/fields/Guranted_Monthly_Addition__c.field-meta.xml
<CustomField>
    <fullName>Guranted_Monthly_Addition__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Guranted Monthly Addition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>