force-app/main/default/objects/Asset/fields/HA__c.field-meta.xml
<CustomField>
    <fullName>HA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ABHI</description>
    <label>HA</label>
    <type>Checkbox</type>
</CustomField>