force-app/main/default/objects/Asset/fields/HAComplete__c.field-meta.xml
<CustomField>
    <fullName>HAComplete__c</fullName>
    <label>HA Completed On</label>
    <type>Date</type>
</CustomField>