force-app/main/default/objects/Asset/fields/HADateTime__c.field-meta.xml
<CustomField>
    <fullName>HADateTime__c</fullName>
    <label>HA Date and Time</label>
    <type>Date</type>
</CustomField>