force-app/main/default/objects/Asset/fields/HAStatus__c.field-meta.xml
<CustomField>
    <fullName>HAStatus__c</fullName>
    <label>HA Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>