force-app/main/default/objects/Asset/fields/HHS__c.field-meta.xml
<CustomField>
    <fullName>HHS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ABHIL</description>
    <label>HHS</label>
    <type>Checkbox</type>
</CustomField>