force-app/main/default/objects/Asset/fields/HR__c.field-meta.xml
<CustomField>
    <fullName>HR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ABHI</description>
    <label>HR</label>
    <type>Checkbox</type>
</CustomField>