force-app/main/default/objects/Asset/fields/IMPS_Date__c.field-meta.xml
<CustomField>
    <fullName>IMPS_Date__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>IMPS Date</label>
    <type>Date</type>
</CustomField>