force-app/main/default/objects/Asset/fields/IMPS_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>IMPS_Status_Flag__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>IMPS Status Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>