force-app/main/default/objects/Asset/fields/Income_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Income_Benefit__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Income Benefit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>