force-app/main/default/objects/Asset/fields/Income_Returned__c.field-meta.xml
<CustomField>
    <fullName>Income_Returned__c</fullName>
    <label>Income Returned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>