force-app/main/default/objects/Asset/fields/Interest_Basis__c.field-meta.xml
<CustomField>
    <fullName>Interest_Basis__c</fullName>
    <label>Interest Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>