force-app/main/default/objects/Asset/fields/Interest_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Type__c</fullName>
    <label>Interest Rate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>