force-app/main/default/objects/Asset/fields/Interested_Party__c.field-meta.xml
<CustomField>
    <fullName>Interested_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ABSLI Field</description>
    <label>Interested Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Interested Party)</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>