force-app/main/default/objects/Asset/fields/Intermediary_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Intermediary_Branch_Code__c</fullName>
    <label>Intermediary Branch Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>