force-app/main/default/objects/Asset/fields/IntermediaryCode__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryCode__c</fullName>
    <description>ABHIL</description>
    <label>Intermediary Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>