force-app/main/default/objects/Asset/fields/IntermediaryEmailId__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryEmailId__c</fullName>
    <description>ABHIL</description>
    <label>Intermediary Email Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>