force-app/main/default/objects/Asset/fields/IntermediaryMobileNumber__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryMobileNumber__c</fullName>
    <description>ABHIL</description>
    <label>Intermediary Mobile Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>