force-app/main/default/objects/Asset/fields/IntermediaryName__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryName__c</fullName>
    <description>ABHIL</description>
    <label>Intermediary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>