force-app/main/default/objects/Asset/fields/IsCombi__c.field-meta.xml
<CustomField>
    <fullName>IsCombi__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ABHI</description>
    <label>Is Combi</label>
    <type>Checkbox</type>
</CustomField>