force-app/main/default/objects/Asset/fields/IsCrossSell__c.field-meta.xml
<CustomField>
    <fullName>IsCrossSell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ABHI</description>
    <label>Is Cross Sell</label>
    <type>Checkbox</type>
</CustomField>