force-app/main/default/objects/Asset/fields/LAN__c.field-meta.xml
<CustomField>
    <fullName>LAN__c</fullName>
    <description>LAN Number</description>
    <externalId>true</externalId>
    <label>Loan Account Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>