force-app/main/default/objects/Asset/fields/LAN_Diff_with_floor_rate__c.field-meta.xml
<CustomField>
    <fullName>LAN_Diff_with_floor_rate__c</fullName>
    <label>LAN_Diff with floor rate</label>
    <type>TextArea</type>
</CustomField>