force-app/main/default/objects/Asset/fields/Last_Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Disbursement_Amount__c</fullName>
    <label>Last Disbursement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>