force-app/main/default/objects/Asset/fields/Last_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Disbursement_Date__c</fullName>
    <label>Last Disbursement Date</label>
    <type>Date</type>
</CustomField>