force-app/main/default/objects/Asset/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ABHIL</description>
    <label>Lead Id</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>