force-app/main/default/objects/Asset/fields/LI_DOB__c.field-meta.xml
<CustomField>
    <fullName>LI_DOB__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>LI DOB</label>
    <type>Date</type>
</CustomField>