force-app/main/default/objects/Asset/fields/LI_Qualification__c.field-meta.xml
<CustomField>
    <fullName>LI_Qualification__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>LI Qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>