force-app/main/default/objects/Asset/fields/Life_Insured__c.field-meta.xml
<CustomField>
    <fullName>Life_Insured__c</fullName>
    <description>ABSLI : 21 May 2024 - Created for ABSLI Asset Data Model requirement etc</description>
    <label>Life Insured</label>
    <length>255</length>
    <type>Text</type>
</CustomField>