force-app/main/default/objects/Asset/fields/Loan_Disbursement_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Disbursement_Status__c</fullName>
    <label>Loan Disbursement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partially</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>