force-app/main/default/objects/Asset/fields/Loan_EMI_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>Loan_EMI_Due_Day__c</fullName>
    <label>Loan EMI Due Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>