force-app/main/default/objects/Asset/fields/Loan_ID__c.field-meta.xml
<CustomField>
    <fullName>Loan_ID__c</fullName>
    <label>Loan ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>