force-app/main/default/objects/Asset/fields/Loan_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Loan_Interest_Rate__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Loan Interest Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>