force-app/main/default/objects/Asset/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>