force-app/main/default/objects/Asset/fields/LOB_Code__c.field-meta.xml
<CustomField>
    <fullName>LOB_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOB Code</label>
    <referenceTo>LOB_Master__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>