force-app/main/default/objects/Asset/fields/LPP_charges__c.field-meta.xml
<CustomField>
    <fullName>LPP_charges__c</fullName>
    <label>LPP charges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>