force-app/main/default/objects/Asset/fields/MandateEndDate__c.field-meta.xml
<CustomField>
    <fullName>MandateEndDate__c</fullName>
    <description>ABHI</description>
    <label>Mandate End Date</label>
    <type>Date</type>
</CustomField>