force-app/main/default/objects/Asset/fields/MandateStartDate__c.field-meta.xml
<CustomField>
    <fullName>MandateStartDate__c</fullName>
    <description>ABHIL</description>
    <label>Mandate Start Date</label>
    <type>Date</type>
</CustomField>