force-app/main/default/objects/Asset/fields/Margin_Shortfall__c.field-meta.xml
<CustomField>
    <fullName>Margin_Shortfall__c</fullName>
    <label>Margin Shortfall</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>