force-app/main/default/objects/Asset/fields/Margin_Status__c.field-meta.xml
<CustomField>
    <fullName>Margin_Status__c</fullName>
    <label>Margin Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>