force-app/main/default/objects/Asset/fields/MasterPolicy__c.field-meta.xml
<CustomField>
    <fullName>MasterPolicy__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>ABHI</description>
    <label>Master Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>