force-app/main/default/objects/Asset/fields/MasterPolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>MasterPolicyNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ABHIL</description>
    <label>Master Policy Number</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>