force-app/main/default/objects/Asset/fields/MaximumPointsLimit__c.field-meta.xml
<CustomField>
    <fullName>MaximumPointsLimit__c</fullName>
    <label>Maximum points limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>