force-app/main/default/objects/Asset/fields/Method_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Method_Of_Payment__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Method Of Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>