force-app/main/default/objects/Asset/fields/MICR_Code__c.field-meta.xml
<CustomField>
    <fullName>MICR_Code__c</fullName>
    <label>MICR Code/Bank Code.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>