force-app/main/default/objects/Asset/fields/NameOfEW__c.field-meta.xml
<CustomField>
    <fullName>NameOfEW__c</fullName>
    <description>ABHI</description>
    <label>Name Of EW</label>
    <length>200</length>
    <type>Text</type>
</CustomField>