force-app/main/default/objects/Asset/fields/NetPremium__c.field-meta.xml
<CustomField>
    <fullName>NetPremium__c</fullName>
    <description>ABHIL</description>
    <label>Net Premium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>