force-app/main/default/objects/Asset/fields/New_ROI__c.field-meta.xml
<CustomField>
    <fullName>New_ROI__c</fullName>
    <label>New ROI</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>