force-app/main/default/objects/Asset/fields/Nominee1__c.field-meta.xml
<CustomField>
    <fullName>Nominee1__c</fullName>
    <label>Nominee1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>