force-app/main/default/objects/Asset/fields/Nominee1_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Nominee1_Percentage__c</fullName>
    <label>Nominee1 Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>