force-app/main/default/objects/Asset/fields/Nominee2__c.field-meta.xml
<CustomField>
    <fullName>Nominee2__c</fullName>
    <label>Nominee2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>