force-app/main/default/objects/Asset/fields/Nominee2_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Nominee2_Percentage__c</fullName>
    <label>Nominee2 Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>