force-app/main/default/objects/Asset/fields/Nominee3__c.field-meta.xml
<CustomField>
    <fullName>Nominee3__c</fullName>
    <label>Nominee3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>