force-app/main/default/objects/Asset/fields/NoOfPrimaryMembers__c.field-meta.xml
<CustomField>
    <fullName>NoOfPrimaryMembers__c</fullName>
    <label>No. of Insured Members</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>