force-app/main/default/objects/Asset/fields/NPA_Status__c.field-meta.xml
<CustomField>
    <fullName>NPA_Status__c</fullName>
    <label>NPA Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>