force-app/main/default/objects/Asset/fields/NumberOfLives__c.field-meta.xml
<CustomField>
    <fullName>NumberOfLives__c</fullName>
    <label>Number Of Lives</label>
    <length>100</length>
    <type>Text</type>
</CustomField>