force-app/main/default/objects/Asset/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <description>ABSLI : 14 May 2024 - Created for ABSLI Asset Data Model requirement etc.</description>
    <label>Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>