force-app/main/default/objects/Asset/fields/Offer_discount__c.field-meta.xml
<CustomField>
    <fullName>Offer_discount__c</fullName>
    <label>Offer discount</label>
    <type>TextArea</type>
</CustomField>